GUI implementation. Refactoring of GUI. Worked on javadoc. Code cleanup. Fixed some warnings